5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1638_2449.log
== TEST (2019-04-13 20:04:24) 
-- CODE:
a=float(input("a: "))
b=float(input("b: "))
c=float(input("c: "))
d=float(input("d: "))
e=float(input("e: "))
f=float(input("f: "))
x=(c*e)-(b*f)/(a*e)-(b*d)
y=(a*f)-(c*d)/(a*e)-(b*d)

if((a*e)-(b*d)>o):
	print(x,y)
else:
	print("Nao tem solucao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if((a*e)-(b*d)>o):
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:06:58) 
-- CODE:
a=float(input("a: "))
b=float(input("b: "))
c=float(input("c: "))
d=float(input("d: "))
e=float(input("e: "))
f=float(input("f: "))
x=(c*e)-(b*f)/(a*e)-(b*d)
y=(a*f)-(c*d)/(a*e)-(b*d)

if(a*e-b*d > o):
	print(x,y)
else:
	print("Nao tem solucao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if(a*e-b*d > o):
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:08:34) 
-- CODE:
a=float(input("a: "))
b=float(input("b: "))
c=float(input("c: "))
d=float(input("d: "))
e=float(input("e: "))
f=float(input("f: "))
x=(c*e)-(b*f)/(a*e)-(b*d)
y=(a*f)-(c*d)/(a*e)-(b*d)

if(a*e-b*d ==o):
	print("Nao tem solucao")
else:
	print(x)
	print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if(a*e-b*d ==o):
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:09:18) 
-- CODE:
a=float(input("a: "))
b=float(input("b: "))
c=float(input("c: "))
d=float(input("d: "))
e=float(input("e: "))
f=float(input("f: "))
x=(c*e)-(b*f)/(a*e)-(b*d)
y=(a*f)-(c*d)/(a*e)-(b*d)

if(a*e - b*d ==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)

-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:09:42) 
-- CODE:
a=float(input("a: "))
b=float(input("b: "))
c=float(input("c: "))
d=float(input("d: "))
e=float(input("e: "))
f=float(input("f: "))
x=(c*e)-(b*f)/(a*e)-(b*d)
y=(a*f)-(c*d)/(a*e)-(b*d)

if(a*e - b*d ==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)

-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:10:14) 
-- CODE:
a=float(input("a: "))
b=float(input("b: "))
c=float(input("c: "))
d=float(input("d: "))
e=float(input("e: "))
f=float(input("f: "))
x=((c*e)-(b*f)/(a*e)-(b*d))
y=((a*f)-(c*d)/(a*e)-(b*d))

if(a*e - b*d == 0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)

-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:12:17) 
-- CODE:
a=float(input("a: "))
b=float(input("b: "))
c=float(input("c: "))
d=float(input("d: "))
e=float(input("e: "))
f=float(input("f: "))
x=(c*e - b*f)/(a*e - b*d)
y=(a*f -c*d)/(a*e - b*d)

if(a*e - b*d == 0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 20:12:40) 
-- CODE:
a=float(input("a: "))
b=float(input("b: "))
c=float(input("c: "))
d=float(input("d: "))
e=float(input("e: "))
f=float(input("f: "))
x=(c*e - b*f)/(a*e - b*d)
y=(a*f -c*d)/(a*e - b*d)

if(a*e - b*d == 0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)

-- EXECUTION TIME:
0.135029
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x=(c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:13:05) 
-- CODE:
a=float(input("a: "))
b=float(input("b: "))
c=float(input("c: "))
d=float(input("d: "))
e=float(input("e: "))
f=float(input("f: "))
x=(c*e - b*f)/(a*e - b*d)
y=(a*f -c*d)/(a*e - b*d)

if(a*e - b*d == 0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 20:15:12) 
-- CODE:
a=float(input("a: "))
b=float(input("b: "))
c=float(input("c: "))
d=float(input("d: "))
e=float(input("e: "))
f=float(input("f: "))
x=(c*e - b*f)/(a*e - b*d)
y=(a*f -c*d)/(a*e - b*d)

if(a*e - b*d == 0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)

-- EXECUTION TIME:
0.194691
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x=(c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:17:16) 
-- CODE:
a=float(input("a: "))
b=float(input("b: "))
c=float(input("c: "))
d=float(input("d: "))
e=float(input("e: "))
f=float(input("f: "))
x=(c*e - b*f)/(a*e - b*d)
y=(a*f -c*d)/(a*e - b*d)

if(a*e - b*d == 0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 20:17:40) 
-- CODE:
a=float(input("a: "))
b=float(input("b: "))
c=float(input("c: "))
d=float(input("d: "))
e=float(input("e: "))
f=float(input("f: "))
x=(c*e - b*f)/(a*e - b*d)
y=(a*f -c*d)/(a*e - b*d)

if(a*e - b*d == 0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)

-- EXECUTION TIME:
0.174541
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x=(c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:20:31) 
-- CODE:
a=float(input("a: "))
b=float(input("b: "))
c=float(input("c: "))
d=float(input("d: "))
e=float(input("e: "))
f=float(input("f: "))


if(a*e - b*d >0):
	print(c*e - b*f)/(a*e - b*d)
	print(a*f -c*d)/(a*e - b*d)
else:
	print("Nao tem solucao")
	

-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:21:47) 
-- CODE:
a=float(input("a: "))
b=float(input("b: "))
c=float(input("c: "))
d=float(input("d: "))
e=float(input("e: "))
f=float(input("f: "))


if((a*e - b*d) > 0):
	print(c*e - b*f)/(a*e - b*d)
	print(a*f -c*d)/(a*e - b*d)
else:
	print("Nao tem solucao")
	

-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:22:39) 
-- CODE:
a=float(input("a: "))
b=float(input("b: "))
c=float(input("c: "))
d=float(input("d: "))
e=float(input("e: "))
f=float(input("f: "))


if((a*e - b*d) == 0):
	print(c*e - b*f)/(a*e - b*d)
	print(a*f -c*d)/(a*e - b*d)
else:
	print("Nao tem solucao")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(c*e - b*f)/(a*e - b*d)
TypeError: unsupported operand type(s) for /: 'NoneType' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:24:10) 
-- CODE:
a=float(input("a: "))
b=float(input("b: "))
c=float(input("c: "))
d=float(input("d: "))
e=float(input("e: "))
f=float(input("f: "))


if((a*e - b*d) != 0):
	print(c*e - b*f)/(a*e - b*d)
	print(a*f -c*d)/(a*e - b*d)
else:
	print("Nao tem solucao")
	

-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:25:23) 
-- CODE:
a=float(input("a: "))
b=float(input("b: "))
c=float(input("c: "))
d=float(input("d: "))
e=float(input("e: "))
f=float(input("f: "))


if(a*e - b*d !== 0):
	print(c*e - b*f)/(a*e - b*d)
	print(a*f -c*d)/(a*e - b*d)
else:
	print("Nao tem solucao")
	

-- ERROR:
File "XXXX", line 9
    if(a*e - b*d !== 0):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:25:27) 
-- CODE:
a=float(input("a: "))
b=float(input("b: "))
c=float(input("c: "))
d=float(input("d: "))
e=float(input("e: "))
f=float(input("f: "))


if(a*e - b*d !== 0):
	print(c*e - b*f)/(a*e - b*d)
	print(a*f -c*d)/(a*e - b*d)
else:
	print("Nao tem solucao")
	

-- ERROR:
File "XXXX", line 9
    if(a*e - b*d !== 0):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:25:36) 
-- CODE:
a=float(input("a: "))
b=float(input("b: "))
c=float(input("c: "))
d=float(input("d: "))
e=float(input("e: "))
f=float(input("f: "))


if(a*e - b*d != 0):
	print(c*e - b*f)/(a*e - b*d)
	print(a*f -c*d)/(a*e - b*d)
else:
	print("Nao tem solucao")
	

-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:27:48) 
-- CODE:
a=float(input("a: "))
b=float(input("b: "))
c=float(input("c: "))
d=float(input("d: "))
e=float(input("e: "))
f=float(input("f: "))


if(a*e - b*d != 0):
	print((c*e - b*f)/(a*e - b*d))
	print((a*f -c*d)/(a*e - b*d))
else:
	print("Nao tem solucao")
	

-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 20:28:26) 
-- CODE:
a=float(input("a: "))
b=float(input("b: "))
c=float(input("c: "))
d=float(input("d: "))
e=float(input("e: "))
f=float(input("f: "))


if(a*e - b*d != 0):
	print((c*e - b*f)/(a*e - b*d))
	print((a*f -c*d)/(a*e - b*d))
else:
	print("Nao tem solucao")
	

-- EXECUTION TIME:
0.183316
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
